2003-07-26  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocumentType.cs :
	  modified private DTD to dtd and added internal DTD (the same thing).
	* XmlElement.cs :
	  Fixed SetAttributeNode() to check if specified attribute is already
	  set to the other element. In fact it is W3C DOM's specification but
	  MS.NET 1.0 failed to catch it.
	* XmlTextReader.cs :
	  ReadAttributeValue() should check if the value of the attribute is
	  already read when the whole value is entity reference.
	  Also, Name of text nodes should be "", not "#text"

2003-07-26  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlAttribute.cs : .ctor() shouldallow localName "xml" (not prefix)
	  with http://www.w3.org/XML/1998/namespace.
	* XmlEntity.cs : patch by Aleksey Sanin. InnerText is now supported.
	* XmlNode.cs : InnerText should handle CDATA and whitespaces.
	* XmlTextReader.cs : Should allow " (#PCDATA)* " in ReadContentSpec().
	* XmlTextWriter.cs : Quick fix for accepting (and writing) same-named
	  attributes (as MS.NET does). It isn't good way and I may change it.

2003-07-24  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* DTDObjectModel.cs : Added DTDEntityDeclarationCollection and
	  DTDNotationDeclarationCollection and replaced Hashtables with them.
	  Added NormalizedDefaultValue property for DTDAttributeDefinition.
	* DTDValidatingReader.cs :
	  - It now reads attribute values into value collection. 
	  - Renamed consumedDefaultAttribute to consumedAttribute, and
	    inContent to insideContent.
	  - GetAttribute() should allow reader's other node state than element.
	  - MoveToNextAttribute() should move when reader is placed other than
	    the first attribute.
	  - HandleError() now supports ValidationType.None (i.e. does nothing).
	  - ValidateAttribute() now collects and resolves attribute value 
	    entity references. (On the other hand, it doesn't support
	    EntityHandling.ExpandCharEntity.)
	  - NodeType shouldn't return Attribute after ReadAttributeValue().