@@ -462,7 +462,8 @@ namespace System.Xml
 			XmlAttribute attr = this.idTable [id] as XmlAttribute;
 			if (attr == null)
 				return null;
-			if (attr.OwnerElement == null || !attr.OwnerElement.IsRooted) {
+//			if (attr.OwnerElement == null || !attr.OwnerElement.IsRooted) {
+                        if (attr.OwnerElement == null) {
 				idTable.Remove (id);
 				return null;
 			}
